--- a/sample.config
+++ b/sample.config
@@ -1,10 +1,49 @@
 [
     {gcm_xmpp, [
-        {gcm_sender_id, "push-on-the-web"},
-        {gcm_api_key, "AIzaSyCk7p2BxGvMODaHCflHIRMSgpebdGSEQrY"},
-        {gcm_xmpp_endpoint, "gcm-xmpp.googleapis.com"},
+        {gcm_jid, "<google project number>@gcm.googleapis.com"},
+        {gcm_api_key, "< api key>"},
+        {gcm_xmpp_endpoint, "gcm.googleapis.com"},
         {gcm_xmpp_port, 5235},
 
         {connection_timeout, 120}
-    ]}
+    ]},
+
+    {lager, [
+        %% What handlers to install with what arguments
+        %% The defaults for the logfiles are to rotate the files when
+        %% they reach 10Mb or at midnight, whichever comes first, and keep
+        %% the last 1 rotations.
+        {handlers, [
+            {lager_console_backend, debug}
+%%             {lager_file_backend, [{file, "log/error.log"},   {level, error},   {size, 1073741824}, {date, "$D0"}, {count, 10}]}, %% 1Gb
+%%             {lager_file_backend, [{file, "log/console.log"},    {level, info},    {size, 1073741824}, {date, "$D0"}, {count, 30}]},  %% 1Gb
+%%             {lager_file_backend, [{file, "log/debug.log"},   {level, debug},   {size, 1073741824}, {date, "$D0"}, {count, 1}]}   %% 1Gb
+        ]},
+
+        %% Whether to write a crash log, and where.
+        %% Commented/omitted/undefined means no crash logger.
+        {crash_log, "log/crash.log"},
+        %% Maximum size in bytes of events in the crash log - defaults to 65536
+        {crash_log_msg_size, 65536},
+        %% Maximum size of the crash log in bytes, before its rotated, set
+        %% to 0 to disable rotation - default is 0
+        {crash_log_size, 10485760},
+        %% What time to rotate the crash log - default is no time
+        %% rotation. See the README for a description of this format.
+        {crash_log_date, "$D0"},
+        %% Number of rotated crash logs to keep, 0 means keep only the
+        %% current one - default is 0
+        {crash_log_count, 5},
+        %% Whether to redirect error_logger messages into lager - defaults to true
+        {error_logger_redirect, true},
+        %% How many messages per second to allow from error_logger before we start dropping them
+        {error_logger_hwm, 5000},
+        %% How big the gen_event mailbox can get before it is switched into sync mode
+        {async_threshold, 150},
+        %% Switch back to async mode, when gen_event mailbox size decrease from `async_threshold'
+        %% to async_threshold - async_threshold_window
+        {async_threshold_window, 5}
+    ]},
+
+    {sasl, [{sasl_error_logger, false}]}
 ].
