--- a/sample.config
+++ b/sample.config
@@ -1,8 +1,8 @@
 [
     {gcm_xmpp, [
-        {gcm_jid, "<google project number>@gcm.googleapis.com"},
-        {gcm_api_key, "< api key>"},
-        {gcm_xmpp_endpoint, "gcm.googleapis.com"},
+        {gcm_jid, "297427606024@gcm.googleapis.com"},
+        {gcm_api_key, "AIzaSyBV44isX6nLbSxmpPNUIVhmFm-SdWiaQ9A"},
+        {gcm_xmpp_endpoint, "gcm.googleapis.com"},<
         {gcm_xmpp_port, 5235},
 
         {connection_timeout, 120}
